Add responsive design

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
               alt="alexmemorial"
               height="96"
               width="186"
+              class="project-img"
               />
             </a>
             <div>
@@ -96,7 +97,7 @@
           </li>
           <li class="project-item">
             <a href="https://elizabethrsotomayor.github.io/main/">
-              <img src="images/cv.png" alt="portfolio" height="96" width="186" />
+              <img src="images/cv.png" alt="portfolio" height="96" width="186" class="project-img"/>
             </a>
               <div>
               <a class="project-link" href="https://elizabethrsotomayor.github.io/main/"
@@ -129,6 +130,7 @@
               alt="todolist"
               height="96"
               width="186"
+              class="project-img"
               />
             </a>
             <div>
@@ -157,7 +159,7 @@
             </li>
             <li class="project-item">
               <a href="https://elizabeth-blog.herokuapp.com/">
-                <img src="images/blog.png" alt="blog" height="96" width="186" />
+                <img src="images/blog.png" alt="blog" height="96" width="186" class="project-img"/>
               </a>
                 <div>
                 <a class="project-link" href="https://elizabeth-blog.herokuapp.com/"
@@ -189,6 +191,7 @@
                   alt="newsletter"
                   height="96"
                   width="88"
+                  class="project-img"
                   />
                 </a>
                 
@@ -226,9 +229,9 @@
       <h2 class="contact-header">Get in Touch</h2>
       <p class="contact-desc">Need a website? Have a question/comment? Just want to say hello? Reach out below.</p>
       <div class="contact-icons">
-        <a class="contact-link" href="https://github.com/elizabethrsotomayor" target="_blank"><i class="fab fa-github fa-5x  contact-icon"></i></a>
-        <a class="contact-link" href="https://www.linkedin.com/in/elizabeth-sotomayor-036068165/" target="_blank"><i class="fab fa-linkedin fa-5x contact-icon"></i></a>
-        <a class="contact-link" href="https://twitter.com/lahijadelmar_" target="_blank"><i class="fab fa-twitter-square fa-5x contact-icon"></i></a>
+        <a class="contact-link" href="https://github.com/elizabethrsotomayor" target="_blank"><i class="fab fa-github fa-3x  contact-icon"></i></a>
+        <a class="contact-link" href="https://www.linkedin.com/in/elizabeth-sotomayor-036068165/" target="_blank"><i class="fab fa-linkedin fa-3x contact-icon"></i></a>
+        <a class="contact-link" href="https://twitter.com/lahijadelmar_" target="_blank"><i class="fab fa-twitter-square fa-3x contact-icon"></i></a>
       </div>
     </div>
 
